# AccessAtlas

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Dockerfile  README.md  biome.json  docker-compose.yml  job-template-test-import.csv  job-test-import.csv  manage.py  package.json  playwright.config.mjs  pnpm-lock.yaml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  container.yml  docs.yml
access_atlas/: asgi.py  settings.py  urls.py  wsgi.py
access_atlas/accounts/: admin.py  apps.py  context_processors.py  forms.py  models.py  preferences.py  tests.py  urls.py  views.py
access_atlas/api/: admin.py  apps.py  authentication.py  forms.py  models.py  permissions.py  schema.py  serializers.py  tests.py  token_services.py  token_views.py  urls.py  views.py
access_atlas/core/: apps.py  autocomplete_views.py  bulk_edit.py  context_processors.py  global_history.py  history.py  history_diff.py  history_filters.py  imports.py  list_filters.py  maps.py  mixins.py  pagination.py  search.py  status_display.py  test_markdown_extensions.py  test_utils.py  tests.py  tomselect.py  urls.py  (+2 more)
docs/: approval.md  architecture.md  bulk-edit.md  columns.md  dashboard.md  domain-model.md  filters.md  index.md  map-feature-prompt.md  map-layers.md  pages-list.md  photos.md  requirements.md  search.md  site-source-integration.md  to-do.md  tomselect.md  v1.md  v2.md  visit.md  workflow-policy.md
scripts/: build-vendor.mjs
templates/: 404.html  object_confirm_delete.html  object_form.html  object_history_detail.html
(+226 files in other folders)
